--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -74,6 +74,10 @@
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit">Sign In</button>
         </form>
+        <div style="text-align: center;margin-top: 15px">
+            <a href="{% url 'signup' %}" class="signup-btn" style="display:inline-block; padding:10px 24px; background:#2196F3; color:#fff; border-radius:6px; text-decoration:none;">Sign Up</a>   
+</div>
+
     </div>
 
 </body>
