building the dashboard and index page

--- a/accounts/templates/dashboard.html
+++ b/accounts/templates/dashboard.html
@@ -49,7 +49,7 @@
         <div class="welcome">
             Hello, {{ request.user.username }}! You have logged in successfully.
         </div>
-        <a href="{% url 'login' %}" class="dashboard">HERE IS YOUR DASHBOARD</a>
+        <a href="{% url 'index' %}" class="dashboard">HERE IS YOUR DASHBOARD</a>
     </div>
 </body>
 </html>
